# goit-ds-hw-16

./: .gitattributes  VGG16.keras  app.py  load_image.py  pyproject.toml
image/: Thumbs.db
